--- a/src/components/table/tables.css
+++ b/src/components/table/tables.css
@@ -19,3 +19,28 @@
   overflow: hidden;
   /*height: 50px;*/
 }
+
+.toolbar{
+  padding: 15px;
+  width: 100%;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
+              linear-gradient(127deg, rgba(0,255,0,.8), rgba(0,255,0,0) 70.71%),
+              linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
+}
+.toolbar button{
+  padding: 20px;
+  border-radius: 10px;
+  border: none;
+  transition: .5s all;
+  box-shadow: 0 5px 20px rgba(205, 116, 44, .4), inset 0 5px 20px rgba(205, 116, 44, .4),inset 0 -5px 20px rgba(205, 116, 44, .4);
+}
+.toolbar button:hover{
+  color: #3fff46 ;
+  font-size: 18px;
+  background: transparent;
+  box-shadow: 5px 5px 20px rgba(205, 116, 44, .9), inset 5px 5px 20px rgba(205, 116, 44, .9),inset 5px -5px 20px rgba(205, 116, 44, .9)
+}
